--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,3 +1,41 @@
 .App {
-  /* text-align: center; */
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.table {
+  width: 100%;
+  table-layout: fixed;
+  border-bottom: 2px solid #019879;
+  border-spacing: 0;
+}
+
+thead {
+  background-color: #019879;
+  color : white;
+}
+
+th, tr {
+  height: 40px;
+}
+
+.button {
+  width: fit-content;
+  height: fit-content;
+  padding: 10px;
+  background-color: #019879;
+  border: none;
+  color: white;
+  border-radius: 5px;
+}
+
+.pageText {
+  padding: 7px;
+  background-color: #019879;
+  color: white;
+  
+  border-radius: 5px;
+  
 }
